--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10930,7 +10930,7 @@ ul.check-list li p {
 
 @media only screen and (max-width: 991px) {
   .contact-style-two .item {
-    background: #104cba;
+    background: #0F4C81;
     border-radius: 7px;
   }
 }
@@ -10945,7 +10945,7 @@ ul.check-list li p {
   line-height: 80px;
   background: #ffffff;
   border-radius: 50%;
-  color: #104cba;
+  color: #0F4C81;
   text-align: center;
 }
 
