--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2549,7 +2549,7 @@ a {
 @media only screen and (min-width: 1024px) and (max-width: 1350px) {
   .navbar.validnavs.navbar-default .navbar-nav li a {
     padding: 30px 10px !important;
-    font-size: 18px;
+    font-size: 16px;
   }
 }
 
@@ -8706,7 +8706,7 @@ a {
   /* overflow: hidden; */
   position: relative;
 }
-
+/* 
 @media only screen and (min-width: 992px) {
   .gallery-items .gallery-item .item.gallery-mixed-item.active .content::after {
     height: 100%;
@@ -8726,7 +8726,7 @@ a {
     opacity: 1;
   }
 }
-
+ */
 .gallery-items.colums-2 .gallery-item {
   width: 50%;
 }
@@ -8954,15 +8954,19 @@ a {
 .gallery-style-one .item .content h4 {
   margin-bottom: -5px;
   font-size: 20px;
-  -webkit-transform: translateY(-20px);
+ /*  -webkit-transform: translateY(-20px);
           transform: translateY(-20px);
   -webkit-transition: all 0.45s ease-in-out;
   transition: all 0.45s ease-in-out;
   opacity: 1;
   -webkit-transition-delay: 150ms;
-          transition-delay: 150ms;
+          transition-delay: 150ms; */
   position: relative;
   display: inline-block;
+  padding: 10px auto;
+  width: 280px;
+  height: 80px;
+  background-color: rgba(15, 76, 129, 0.35);
 }
 
 .gallery-style-one .item .content h4::after {
@@ -11788,7 +11792,7 @@ text-align:center !important;
 .banner-title{
   font-family: 'Montserrat', sans-serif;
   font-weight: 400;
-  font-size: 60px;
+  font-size: 54px;
   color: #fff;
   text-shadow: 0px 2px 3px #000000;
 }
@@ -11894,4 +11898,42 @@ text-align:center !important;
 
 .idiom-change{
   font-weight: 300;
+}
+
+.boletin form input{
+  
+  border: none;
+  border-bottom: 1px solid #898a8d;
+}
+
+.newsletter form button{
+  border-radius: 5px;
+  color: #0077B5;
+}
+
+.brown{
+  color: #B03F1F;
+  text-shadow: none;
+  font-size: 17px;
+}
+
+
+@media only screen and (min-width: 300px) and (max-width: 1200px) {
+  .gallery-style-one .item .content h4 {
+    margin-bottom: -5px;
+    font-size: 17px;
+   /*  -webkit-transform: translateY(-20px);
+            transform: translateY(-20px);
+    -webkit-transition: all 0.45s ease-in-out;
+    transition: all 0.45s ease-in-out;
+    opacity: 1;
+    -webkit-transition-delay: 150ms;
+            transition-delay: 150ms; */
+    position: relative;
+    display: inline-block;
+    padding: 8px auto;
+    width: 100%;
+    height: 60px;
+    background-color: rgba(15, 76, 129, 0.35);
+  }
 }
