--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,11 +6,18 @@ Description: Crysa - It Solution Template
 Version: 1.0.0
 */
 @import url("https://fonts.googleapis.com/css2?family=Yantramanav:wght@100;300;400;500;700;900&display=swap");
+
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR&family=Inter:wght@100;200;300;400;700;800&family=M+PLUS+Rounded+1c:wght@100;300;400;500;700&display=swap');
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+@font-face {
+  font-family: 'Arial Rounded';
+  src: url('/source/assets/fonts/unicode.arialr.ttf');
 }
 
 body,
@@ -377,7 +384,7 @@ a {
   
   .banner--main .banner-title{
     
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'M PLUS Rounded 1c', sans-serif;
     font-size: 40px;
     color: #fff;
     font-weight: 400;
@@ -817,7 +824,7 @@ a {
 
 .heading {
   /* font-family: 'IBM Plex Sans KR', sans-serif; */
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   font-weight: 400;
   margin-top: -5px;
   letter-spacing: 2%;
@@ -11749,7 +11756,7 @@ text-align:center !important;
   margin-left: 0px;
   font-size: 30px;
   margin-bottom: 40px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .subtitular-servicios-normal{
@@ -11764,12 +11771,12 @@ text-align:center !important;
   margin-left: 0px;
   font-size: 30px;
   margin-bottom: 40px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .heading-black{
   color: #000000;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   font-weight: 500;
   margin-top: -5px;
   letter-spacing: 2%;
@@ -11797,7 +11804,7 @@ text-align:center !important;
 } 
 
 .banner-title{
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   font-weight: 400;
   font-size: 54px;
   color: #fff;
@@ -11878,7 +11885,7 @@ text-align:center !important;
   font-weight: 400;
   font-size: 40px;
   color: #0F4C81;
-  font-family: 'Montserrat', sans-serif;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
 }
 
 .contacto-socials{
@@ -11947,7 +11954,7 @@ text-align:center !important;
 }
 
 .cabecera{
-  font-family: 'Montserrat', sans-serif !important;
+  font-family: 'M PLUS Rounded 1c', sans-serif;
   font-weight: 300;
 }
 
