--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8985,6 +8985,7 @@ a {
   width: 280px;
   height: 80px;
   background-color: rgba(15, 76, 129, 0.35);
+  color: white;
 }
 
 .gallery-style-one .item .content h4::after {
@@ -9739,6 +9740,7 @@ ul.check-list li p {
 
 .blog-style-one h4.title {
   font-size: 24px;
+  height: 140px;
 }
 
 .blog-style-one .author {
@@ -11690,7 +11692,7 @@ footer .footer-bottom .text-right li:first-child {
   width: 100%;
   height: 100%;
   z-index: 999999;
-  background: url(../img/preloader-sst.gif) center no-repeat #fff;
+  background: url(../img/sst-preloader.gif) center no-repeat #fff;
   text-align: center;
 }
 
@@ -11969,3 +11971,29 @@ text-align:center !important;
   border: none;
     border-radius: 5px;
 }
+
+.gallery-item .thumb {
+  position: relative;
+  overflow: hidden;
+}
+
+.gallery-item .thumb:hover img {
+  transform: scale(1.05);
+}
+
+.gallery-item .thumb img {
+  transition: transform 0.5s ease;
+  width: 100%;
+}
+
+.banner-image-creado::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.5);
+  opacity: 0.5;
+}
+
